Updating HTML and CSS File as required by Reviewer

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  height: 340px;
 }
 
 .section-2 .inner-container {
@@ -170,11 +171,13 @@ body {
 
 .section-2 .p {
   font-size: 12px;
+  width: 60%;
 }
 
 .section-2 .h3 {
   color: #ec5242;
   font-size: 15px;
+  width: 30%;
 }
 
 .section-2 .red-box {
@@ -186,6 +189,7 @@ body {
   justify-content: center;
   font-size: large;
   font-weight: 600;
+  margin-top: 20px;
 }
 
 .section-2 .whole-program {
